Added createNewReservation() in ReservationService, no passing tests